RTl fix for potential white space on left side of Featured Images

--- a/rtl.css
+++ b/rtl.css
@@ -1657,6 +1657,10 @@ li.pingback.bypostauthor > article {
   display: block;
 }
 
+.rtl .featured-image > a > img, .rtl .featured-image > img {
+  left: initial;
+}
+
 /*
 
 ATTENTION:
